# head-direction

./: .gitignore  .pre-commit-config.yaml  DEV.md  README.md  pyproject.toml  setup.py
.github/workflows/: code_quality.yml  deploy.yml  deploy_docs.yml  release_pypi.yml
docs/: _config.yml  _toc.yml  api.rst  dev_guide.md  intro.md  refs.bib
examples/: demo_analysis.ipynb  tracking_plot.py
head_direction/: __init__.py  head.py  tools.py
head_direction/tests/: test_head.py
src/head_direction/: __init__.py  core.py  type_alias.py  utils.py
tests/: test_core.py  test_utils.py
